modified xsns_09_bmp.ino regarding needs of "Taupunktlüfter"

--- a/tasmota/tasmota_xsns_sensor/xsns_09_bmp.ino_hawa-12.5.0.2
+++ b/tasmota/tasmota_xsns_sensor/xsns_09_bmp.ino_hawa-12.5.0.2
@@ -73,9 +73,7 @@ typedef struct {
 
 uint8_t bmp_addresses[] = { BMP_ADDR1, BMP_ADDR2 };
 uint8_t bmp_count = 0;
-#ifdef USE_DEEPSLEEP
-uint8_t bmp_deepsleep = 0;  // Prevent updating measurments once BMP has been put to sleep (just before ESP enters deepsleep)
-#endif
+uint8_t bmp_once = 1;
 
 bmp_sensors_t *bmp_sensors = nullptr;
 
@@ -480,10 +478,12 @@ void Bme680Read(uint8_t bmp_idx) {
 /********************************************************************************************/
 
 void BmpDetect(void) {
+  int bmp_sensor_size = BMP_MAX_SENSORS * sizeof(bmp_sensors_t);
   if (!bmp_sensors) {
-    bmp_sensors = (bmp_sensors_t*)calloc(BMP_MAX_SENSORS, sizeof(bmp_sensors_t));
+    bmp_sensors = (bmp_sensors_t*)malloc(bmp_sensor_size);
   }
   if (!bmp_sensors) { return; }
+  memset(bmp_sensors, 0, bmp_sensor_size);  // Init defaults to 0
 
   for (uint32_t i = 0; i < BMP_MAX_SENSORS; i++) {
     uint8_t bus = i >>1;
@@ -523,10 +523,6 @@ void BmpDetect(void) {
 }
 
 void BmpRead(void) {
-#ifdef USE_DEEPSLEEP
-  // Prevent updating measurments once BMP has been put to sleep (just before ESP enters deepsleep)
-  if (bmp_deepsleep) return;
-#endif
   for (uint32_t bmp_idx = 0; bmp_idx < bmp_count; bmp_idx++) {
     switch (bmp_sensors[bmp_idx].bmp_type) {
       case BMP180_CHIPID:
@@ -557,21 +553,21 @@ void BmpShow(bool json) {
       strlcpy(name, bmp_sensors[bmp_idx].bmp_name, sizeof(bmp_sensors[bmp_idx].bmp_name));
       if (bmp_count > 1) {
         // BMP280-77
-        snprintf_P(name, sizeof(name), PSTR("%s%c%02X"), name, IndexSeparator(), bmp_sensors[bmp_idx].bmp_address);
+        // hawa: sensName
+        if (bmp_sensors[bmp_idx].bmp_address == 0x76) {
+          snprintf_P(name, sizeof(name), PSTR("%s%c%s"), name, IndexSeparator(), "A");
+        }
+        if (bmp_sensors[bmp_idx].bmp_address == 0x77) {
+          snprintf_P(name, sizeof(name), PSTR("%s%c%s"), name, IndexSeparator(), "I");
+        }
+        // snprintf_P(name, sizeof(name), PSTR("%s%c%02X"), name, IndexSeparator(), bmp_sensors[bmp_idx].bmp_address);
 #ifdef ESP32
         if (TasmotaGlobal.i2c_enabled_2) {           // Second bus enabled
           uint8_t bus = bmp_sensors[0].bmp_bus;
           for (uint32_t i = 1; i < bmp_count; i++) {
             if (bus != bmp_sensors[i].bmp_bus) {     // Different busses
               // BMP280-77-1
-              // hawa: sensName
-              if (bmp_sensors[bmp_idx].bmp_address == 0x76) {
-                snprintf_P(name, sizeof(name), PSTR("%s%c%s"), name, IndexSeparator(), "A");
-              }
-              if (bmp_sensors[bmp_idx].bmp_address == 0x77) {
-                snprintf_P(name, sizeof(name), PSTR("%s%c%s"), name, IndexSeparator(), "I");
-              }
-              // snprintf_P(name, sizeof(name), PSTR("%s%c%d"), name, IndexSeparator(), bmp_sensors[bmp_idx].bmp_bus +1);
+              snprintf_P(name, sizeof(name), PSTR("%s%c%d"), name, IndexSeparator(), bmp_sensors[bmp_idx].bmp_bus +1);
               break;
             }
           }
@@ -703,7 +699,6 @@ bool Xsns09(uint32_t function) {
 #ifdef USE_DEEPSLEEP
       case FUNC_SAVE_BEFORE_RESTART:
         BMP_EnterSleep();
-        bmp_deepsleep = 1;
         break;
 #endif // USE_DEEPSLEEP
     }
