unify parameter ADC_LOG controlling ADC logging

--- a/tasmota/tasmota-UCO/zUCO_Silvercrest_v3.1
+++ b/tasmota/tasmota-UCO/zUCO_Silvercrest_v3.1
@@ -202,7 +202,7 @@
     4. Param:   NULL-Offset; Strom kleiner als der hier eingetragene wird als 0 behandelt
   hawa: xsns_02_analog.ino aktivieren zum logging der ADC Werte
 */
-#define hawa_LOG               false
+// #define ADC_LOG
 #define USE_UFILESYS
 #define UFSYS_SIZE 8192
 #endif    // ESP8266
