--- a/tasmota/tasmota-UCO/zUCO_Silvercrest_v3.2
+++ b/tasmota/tasmota-UCO/zUCO_Silvercrest_v3.2
@@ -306,7 +306,7 @@ Strapping Pins:   The ESP32 chip has the following strapping pins:
     4. Param:   NULL-Offset; Strom kleiner als der hier eingetragene wird als 0 behandelt
 */
 // hawa-lc4: xsns_02_analog.ino Zeile 482 (12.5.0.2) bzw. 504 (13.2.0.2) aktivieren des logging der ADC Werte
-#define hawa_LOG               false
+// #define ADC_LOG
 
 #ifdef USE_NETWORK_LIGHT_SCHEMES
 #undef USE_NETWORK_LIGHT_SCHEMES                // Add support for light schemes via DDP (via UDP on port 4048)
