--- a/tasmota/tasmota_support/support_rotary.ino_hawa-14.0.0.2
+++ b/tasmota/tasmota_support/support_rotary.ino_hawa-14.0.0.2
@@ -260,12 +260,10 @@ void RotaryHandler(void) {
       if (Encoder[index].abs_position[button_pressed] > Settings->param[P_ROTARY_MAX_STEP]) {  // SetOption43 - Rotary steps
         Encoder[index].abs_position[button_pressed] = Settings->param[P_ROTARY_MAX_STEP];      // SetOption43 - Rotary steps
       }
-
 #ifdef ROTARY_RAW
-      Response_P(PSTR("{\"Rotary%d\":{\"Btn\":%d,\"Pos\":%d}}"), index +1, button_pressed, rotary_position);      // hawa-lc4: report rotary raw data
-      MqttPublishTeleSensor();                                                                                    // hawa-lc4: report rotary raw data
+      Response_P(PSTR("{\"Rotary%d\":{\"Btn\":%d,\"Pos\":%d}}"), index +1, button_pressed, rotary_position);
+      MqttPublishTeleSensor();
 #endif  // ROTARY_RAW
-
       Response_P(PSTR("{\"Rotary%d\":{\"Pos1\":%d,\"Pos2\":%d}}"), index +1, Encoder[index].abs_position[0], Encoder[index].abs_position[1]);
       XdrvRulesProcess(0);
 #ifdef USE_LIGHT
